Moved to Java 1.8, prints elapsed time between batches, first release